cliqz@cliqz.com/chrome/skin/browser.css
/* ... */
/* end video */

/* dictionary */

.cliqz-result-dictionary-main {
    display: inline-block;
    vertical-align: middle;
}

.cliqz-result-dictionary-toggler {
    width: 100px;
    display: inline-block;
    vertical-align: middle;
}

.cliqz-result-dictionary-pronunciation {
    font-style: italic;
    font-weight: normal;
    color: #ABABAB;
}

.cliqz-result-dictionary-type {
    font-weight: bold;
}

.cliqz-result-mid-box ol {
    margin: 5px 0;
    padding-left: 18px
}

.cliqz-result-dictionary-definition {
    width: 90%;
    color: #666666;
}

.cliqz-result-dictionary-subtype {
    color: #FFA319;
}

.cliqz-result-dictionary-translations {
    display: block;
    font-size: 12px;
    background: #f3f3f3;
    padding: 2px 0 2px 15px;
    max-height: 15px;
    line-height: 15px;
    overflow: hidden;
}

.cliqz-result-dictionary-translation-header {
    font-weight: bold;
    text-transform: uppercase;
}

.cliqz-result-dictionary-translation-language {
    font-weight: bold;
    padding-left: 5px;
}

.cliqz-result-dictionary-language-header {
    font-weight: bold;
}

.cliqz-result-dictionary-synonyms {
    display: block
    font-size: 12px;
    background: #f3f3f3;
    padding: 2px 0 2px 15px;
    max-height: 15px;
    overflow: hidden;
}

.cliqz-result-dictionary-synonyms-header {
    font-weight: bold;
    padding-left: 5px;
}

.cliqz-result-dictionary-synonyms:after {
    content: ','
}
.cliqz-result-dictionary-synonyms:last-of-type:after {
    content: ''
}

/* end dictionary */

/* bundesliga */

.cliqz-bundesliga-logo {
    height: 40px;
}

.cliqz-bundesliga-match {
    display: inline-block;
    height: 20px;
    margin-right: 5px;
    padding: 0;
}

.cliqz-bundesliga-column {
    display: inline-block;
    vertical-align: top;
}

.cliqz-bundesliga-team-logo {
    height: 16px;
    padding: 2px 2px;
}

.cliqz-bundesliga-team-name {
    display: inline-block;
    padding-top: 3px;
    vertical-align: top;
    font-size: 12px;
    font-weight: bold;
}

.cliqz-bundesliga-team-score {
    display: inline-block;
    font-size: 12px;
    font-weight: bold;
    color: #ffffff;
}

.cliqz-bundesliga-time {
    color: grey;
    font-size: 14px;
}

/* end bundesliga */

/* bitcoin */
.cliqz-bitcoin-logo {
    height: 50px;
    float: left;
    padding-right: 20px;
}

.cliqz-bitcoin-item {
    background-color: #CCC;
    border: 1px solid #CCC;
    display: inline-block;
    height: 25px;
    padding: 2;
    width: 220px;
}

.cliqz-bitcoin-column {
    display: inline-block;
    vertical-align: top;
}

.cliqz-bitcoin-score {
    display: inline-block;
    font-size: 12px;
    font-weight: bold;
    color: #ffffff;
}

/* end bitcoin */

/* calculator */

.cliqz-calc-text-div {
    text-align: left;
    padding-left: 35px
}

.cliqz-calc-text-expr {
    color: #A8B9C0;
    font-size: 20px;
}

.cliqz-calc-text-answer {
    color: black;
    font-size: 25px;
}

.cliqz-calc-button-div {
    height: 25px;
    margin-left: 35px;
    border-radius: 3px;
    background-color: #b6d6e3;
    padding: 5px;
    text-align: center;
    cursor: pointer;
}

.cliqz-calc-button-img {
    height: 22px;
    width: 22px;
    margin-left: 5px;
}

.cliqz-calc-button-text {
    padding-left: 10px;
    color: white;
    font-size: 16px;
    text-align: center;
}

/* end calculator */

/* entity zones */

/* Entity Search */

.entity-search-container {
  padding: 15px;
}

.entity-search-container [url] {
  cursor: pointer;
}

.entity-search-aktuell {
  padding-bottom: 15px;
}

.entity-search-aktuell span{
  padding: 0 13px;
  color: #717171;
}

.entity-search-box {
  border: 1px solid #3E86FC;
  width: 485px;
  height: 30px;
  margin-bottom: 15px;
  background-color: white;
}

#entity-search-box-icon {
  background-color: #3E86FC;
}

#entity-search-box-input {
  vertical-align: top;
  font-size: 20px;
  width: 440px;
  height: 28px;
  border: none;
}

.entity-search-container-app {
  display: inline-block;
  width: 90px;
  height: 90px;
  border-radius: 5px;
  margin-right: 5px;
}

.entity-search-container-app-text {
  color: white;
  padding: 5px 0;
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
}

.entity-search-container-app div {
  margin-top: 15px;
  text-align: center;
}

/* Entity News */

.entity-news-title {
  color: #414141;
  font-size: 14px;
  margin-bottom: 5px;
}

.entity-news-title span {
  color: #1759a4;
}

.entity-news-title img {
  float: right;
  width: 48px;
  margin: -5px -5px 0 0;
}

.entity-news-story {
  padding: 5px 0;
  border-bottom: 1px solid #DDDDDD;
  max-width: 640px;
  padding-bottom: 8px;
  margin-bottom: 8px;
}

.entity-news-story-last {
  border-bottom: none;
}

.entity-news-story-image img {
  width: 80px;
  height: 50px;
}

.entity-news-story-description {
  vertical-align: top;
  padding: 0 0 0 5px;
}

.entity-news-story-title {
  color: #333333;
  font-size: 14px;
  font-weight: bold;
  max-width: 550px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.entity-news-story-time {
  color: #c92b35;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 550px;
  font-size: 14px;
  height: 30px;
  margin-top: 5px;
}

.entity-news-story-description-text {
  color: #333333;
}

.entity-news-categories {
  color: #437cbc;
  font-size: 14px;
}

.entity-news-categories span{
  padding-right: 15px;
  text-decoration: underline;
}

.entity-news-story-image {
  display: inline-block;
}

.entity-news-story-description {
  display: inline-block;
}

/* Entity Video */

.entity-video-search-box {
  border: 1px solid #A1A1A1;
}

.entity-video-category {
  color: #C1C1C1;
  font-size: 14px;
  margin-bottom: 5px;
}

.entity-video-indented {
  padding-left: 5px;
}

.entity-video-group {
  display: inline-block;
  width: 100px;
  margin-right: 10px;
}

.entity-video-thumbnail {
  overflow: hidden;
  width: 100px;
  height: 60px;
}

.entity-video-title {
  color: #717171;
  padding: 2px 0;
}
/* ... */

